2002-01-12  Frank Warmerdam  <warmerdam@pobox.com>

	* core/gdal.h: added GDAL_VERSION_NUM, GDAL_RELEASE_DATE and
	GDAL_RELEASE_NAME macros.

2001-12-15  Frank Warmerdam  <warmerdam@pobox.com>

	* core/gdaldriver.cpp: try to ensure that poDriver gets set on 
	datasets after creation.

	* ogr/ogrsf_frmts/s57/*: implement fast feature counting and fetching
	of extents boxes.

2001-12-14  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/aigrid/gridlib.c: fixed handling of RMin's sign for short
	RMin values.

2001-12-12  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/*: added support for large files in rawdataset.h, and
	some of the derived formats.

2001-12-11  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/jpeg/jpgdataset.cpp: for green and blue into block cache
	when reading red. 

2001-12-09  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/bsb: added bsb format.

2001-12-06  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/fits/fitsdataset.cpp: applied substantial updates from Diana.

	* frmts/gtiff/geotiff.cpp: fixed bug in error/warning reporting when
	a filename is the "module" and it has % directives in it.

	* ogr/ogr_srs_xml.cpp: added preliminary xml srs support.

2001-11-29  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/sdts/sdtsrasterreader.cpp: Check for CPL errors in order
	to avoid infinite recursion.

	* Fixed bug with the block sampling rate being too low to satisfy 
	large sample count values.  Fixed bug with tiled images including 
	some uninitialized or zero data in the sample set on partial edge 
	tiles.

2001-11-27  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/usgsdem: Implemented USGS DEM format based on VTP code.

2001-11-18  Frank Warmerdam  <warmerdam@pobox.com>

	* port/cpl_minixml.cpp: added new simple XML parser.

	* frmts/vrt: new "virtual" dataset format.

	* bridge/*: upgraded bridge_test, and added various entry points.

	* removed all vestiages of GDALProjDef.

2001-11-06  Frank Warmerdam  <warmerdam@pobox.com>
